[package]
name = "sewer"
description = "Regex-based binary patching utility"
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.15", features = ["derive"] }
regex = "1.5.5"
tempfile = "3.3.0"
sewer-replacement = { version = "0.1.0", path = "../../crates/replacement" }
peg = "0.8.0"
thiserror = "1.0.31"
